--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -7,9 +7,9 @@
 <p>@_selectedItem.Name</p>
 
 
-@*<p>Antd dropdown using Select component</p>
+<p>Antd dropdown using Select component</p>
 <SelectDetailComponent Data="_selectNames"></SelectDetailComponent>
-*@
+
 @code {
     private SelectModel _selectedItem = new SelectModel();
 
