--- a/Pages/SelectDetailComponent.razor
+++ b/Pages/SelectDetailComponent.razor
@@ -26,7 +26,7 @@
         {
             if (item.Divider)
             {
-                <SelectOption TItem="string" TItemValue="string" Disabled="true" Style="background: #c9c9c9; font-size: 0.25em;"></SelectOption>
+                <Divider />
             }
             else
             {
@@ -35,7 +35,8 @@
                       TItem="string"
                       Value="@item.Id"
                       Label="@item.Name"
-                      Disabled=@item.Disabled>
+                      Disabled=@item.Disabled                      
+                >
                 </SelectOption>
             }
         }
@@ -72,6 +73,7 @@
     {
         if (!CurrentValue.Equals(value.Id))
         {
+            CurrentValue = value.Id;
             if (OnSelectedItem.HasDelegate)
             {
                 OnSelectedItem.InvokeAsync(value);
