--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -10,5 +10,6 @@
 
 <link href="~/css/ant-design-blazor.css" rel="stylesheet" />
 <script src="~/js/ant-design-blazor.js"></script>
+<link href="~/css/site.css" rel="stylesheet" />
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
