--- a/Pages/SimpleSelectComponent.razor
+++ b/Pages/SimpleSelectComponent.razor
@@ -32,7 +32,7 @@
             }
             else
             {
-                <SimpleSelectOption Class="ant-select-selection" Value="@item.Name" Label="@item.Id" Disabled=@item.Disabled></SimpleSelectOption>
+                <SimpleSelectOption Class="ant-select-selection" Value="@item.Description" Label="@item.Id" Disabled=@item.Disabled></SimpleSelectOption>
             }
         }
     </SelectOptions>
