--- a/Pages/TestPage.razor
+++ b/Pages/TestPage.razor
@@ -32,7 +32,7 @@
             new SelectModel
             {
                 Id = "Value Test1",
-                Name = "label Test1",
+                Description = "label Test1",
                 Disabled = false
             }
         };
