--- a/Pages/SelectDetailComponent.razor
+++ b/Pages/SelectDetailComponent.razor
@@ -21,6 +21,7 @@
         TItem="string"
         TItemValue="string"
         LabelInValue="false"
+        @bind-Value="@_currentValue"
         OnSelectedItemChanged="ItemClicked" Disabled="@Disabled">
 
     <SelectOptions>
@@ -35,8 +36,8 @@
                 <SelectOption Class="@OptionCssClass"
                       TItemValue="string"
                       TItem="string"
-                      Value="@item.Description"
-                      Label="@item.Id"
+                      Value="@item.Id"
+                      Label="@item.Description"
                       Disabled=@item.Disabled
                 >
                 </SelectOption>
@@ -68,7 +69,7 @@
 
     protected override void OnInitialized()
     {
-        _currentValue = CurrentValue;
+        //_currentValue = CurrentValue;
     }
     //private SelectModel ConvertToSelectModel(string jsonString)
     //{
@@ -79,10 +80,10 @@
 
     private void ItemClicked(string value)
     {
-        if (value != null && !_currentValue.Equals(value))
+        if (value != null && !CurrentValue.Equals(value))
         {
             _currentValue = value;
-            var selectedModel = Data.Single(m => m.Description.Equals(value));
+            var selectedModel = Data.Single(m => m.Id.Equals(value));
             var returnModel = new SelectModel
                 {
                     Id = selectedModel.Id,
@@ -95,6 +96,12 @@
                 OnItemClick.InvokeAsync(returnModel);
             }
         }
+    }
+
+    protected override void OnParametersSet()
+    {
+        _currentValue = CurrentValue;
+        base.OnParametersSet();
     }
     //private void OnSelectedItemChanged(SelectModel value)
     //{
