--- a/Pages/DropDownComponent.razor
+++ b/Pages/DropDownComponent.razor
@@ -16,7 +16,7 @@
                 }
                 else
                 {
-                    if(_userHasAuthorization)
+                    if(_userIsAuthorized)
                     {
                         <MenuItem Disabled="@item.Disabled" Id="@item.Id">@item.Description</MenuItem>
                     }
