just checkin not lose any code

--- a/Pages/AntDesignAutoCompleteComponent.razor
+++ b/Pages/AntDesignAutoCompleteComponent.razor
@@ -3,7 +3,7 @@
 <AutoComplete 
     @bind-Value="@value" 
     Options="@Data" 
-    OnSelectionChange="OnSelectionChange" 
+    OnSelectionChange="OnChangeAsync" 
     OnInput="OnInputChangeAsync"
     Placeholder="@PlaceholderCaption"
 />
