--- a/Pages/TestComponent.razor
+++ b/Pages/TestComponent.razor
@@ -1,20 +1,35 @@
 ﻿@using AntDesign
 
-<Divider>Input</Divider>
-<AutoComplete Options="@options">
-    <div>
-        <AutoCompleteInput Placeholder="input here" @bind-Value="@inputValue" />
-        <Spin></Spin>
-    </div>
-    
-</AutoComplete>
+<AutoComplete @bind-Value="@value" Options="@options" OnSelectionChange="OnSelectionChange" OnActiveChange="OnActiveChange" Placeholder="input here"/>
+<Divider></Divider>
+<span>bind-Value:@value</span>
+<br />
+<span>SelectedValue:@selectItem?.Value</span>
+<br />
+<span>ActiveValue:@activeItem?.Value</span>
 
 @code
 {
-    private string inputValue;
-    private string searchValue;
+    private string value;
 
-    List<string> options = new List<string>(){
+    List<string> options = new List<string>()
+{
         "Beijing","Shanghai","Guangzhou","Shenzhen","Chongqing","Wuhan"
     };
+
+
+    private AutoCompleteOption selectItem;
+
+    void OnSelectionChange(AutoCompleteOption item)
+    {
+        selectItem = item;
+    }
+
+    private AutoCompleteOption activeItem;
+
+    void OnActiveChange(AutoCompleteOption item)
+    {
+        activeItem = item;
+        activeItem.AutoComplete.RemoveOption(item);
+    }
 }
