--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -88,17 +88,20 @@ select {
         top: 40px;
         left: 0;
         background: white;
-        width: 100%;
         padding: 0;
         z-index: 10;
         border: 1px solid #ced4da;
         border-radius: 0.5rem;
         box-shadow: 0 30px 25px 8px rgba(0, 0, 0, 0.1);
+        max-height: 256px;
+        overflow-y: auto;
+        min-width: 100%;
     }
 
     .autocomplete .option {
         display: block;
         padding: 0.25rem;
+        cursor: pointer;
     }
 
         .autocomplete .option .option-text {
